// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om den avdøde Skal rendre selvstendig 1`] = `
<div>
  <form>
    <div
      class="sc-gueYoa qDReO"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long navds-body-long--medium"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <div
      class="sc-brKeYL khYCDn"
      id="jobbStatus"
    >
      <fieldset
        class="navds-checkbox-group navds-checkbox-group--medium navds-fieldset navds-fieldset--medium"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          dinSituasjon.jobbStatus
        </legend>
        <div
          class="navds-checkboxes"
        >
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              checked=""
              class="navds-checkbox__input"
              id="checkbox-r19"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidstaker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r19"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.arbeidstaker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              checked=""
              class="navds-checkbox__input"
              id="checkbox-r1a"
              required=""
              type="checkbox"
              value="jobbStatus.selvstendig"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1a"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.selvstendig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r1b"
              required=""
              type="checkbox"
              value="jobbStatus.underUtdanning"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1b"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.underUtdanning
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r1c"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidssoker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1c"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.arbeidssoker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r1d"
              required=""
              type="checkbox"
              value="jobbStatus.ingen"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1d"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.ingen
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r18"
        />
      </fieldset>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="kol-75"
          >
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].arbeidsgiver"
              >
                dinSituasjon.arbeidsforhold.arbeidsgiver
              </label>
              <input
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].arbeidsgiver"
                required=""
                type="text"
                value="Potetskreller AS"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r1e"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="sc-fsQiph fPJEiB"
          >
            <div
              id="arbeidsforhold[0].ansettelsesforhold"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="select-r1f"
                >
                  dinSituasjon.arbeidsforhold.ansettelsesforhold
                </label>
                <div
                  class="navds-select__container"
                >
                  <select
                    class="navds-select__input navds-body-short navds-body--medium"
                    id="select-r1f"
                  >
                    <option
                      value=""
                    >
                      felles.velg
                    </option>
                    <option
                      value="stillingType.fast"
                    >
                      stillingType.fast
                    </option>
                    <option
                      value="stillingType.midlertidig"
                    >
                      stillingType.midlertidig
                    </option>
                    <option
                      value="stillingType.sesongarbeid"
                    >
                      stillingType.sesongarbeid
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="navds-select__chevron"
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="select-error-r1f"
                />
              </div>
            </div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].stillingsprosent"
              >
                dinSituasjon.arbeidsforhold.stillingsprosent
              </label>
              <input
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].stillingsprosent"
                placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
                required=""
                type="text"
                value="100%"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r1h"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            id="arbeidsforhold[0].forventerEndretInntekt.svar"
          >
            <div
              class="sc-gueYoa qDReO"
            >
              <fieldset
                class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
              >
                <legend
                  class="navds-fieldset__legend navds-label"
                >
                  dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
                </legend>
                <div
                  class="navds-radio-buttons"
                >
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-r1k"
                      name="arbeidsforhold[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.ja"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-r1k"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.ja
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-r1l"
                      name="arbeidsforhold[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.nei"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-r1l"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.nei
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-r1m"
                      name="arbeidsforhold[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.vetIkke"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-r1m"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.vetIkke
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-fieldset__error"
                  id="fieldset-error-r1j"
                />
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.selvstendig.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="kol-75"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="selvstendig[0].beskrivelse"
            >
              dinSituasjon.selvstendig.beskrivelse
            </label>
            <input
              class="navds-text-field__input navds-body-short navds-body-medium"
              id="selvstendig[0].beskrivelse"
              required=""
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r2g"
            />
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="selvstendig[0].orgnr"
            >
              dinSituasjon.selvstendig.orgnr
            </label>
            <input
              class="navds-text-field__input navds-body-short navds-body-medium"
              id="selvstendig[0].orgnr"
              placeholder="dinSituasjon.selvstendig.orgnrplaceholder"
              required=""
              size="25"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r2h"
            />
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            id="selvstendig[0].forventerEndretInntekt.svar"
          >
            <div
              class="sc-gueYoa qDReO"
            >
              <fieldset
                class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
              >
                <legend
                  class="navds-fieldset__legend navds-label"
                >
                  dinSituasjon.selvstendig.forventerEndretInntekt.svar
                </legend>
                <div
                  class="navds-radio-buttons"
                >
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-r2k"
                      name="selvstendig[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.ja"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-r2k"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.ja
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-r2l"
                      name="selvstendig[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.nei"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-r2l"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.nei
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-r2m"
                      name="selvstendig[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.vetIkke"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-r2m"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.vetIkke
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-fieldset__error"
                  id="fieldset-error-r2j"
                />
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          + 
          knapp.leggTilNaeringer
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
      </div>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <fieldset
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r1p"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.grunnskole"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1p"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.grunnskole
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r1q"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.videregående"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1q"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.videregående
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r1r"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.fagbrev"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1r"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.fagbrev
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r1s"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.bachelorgrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1s"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.bachelorgrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  checked=""
                  class="navds-radio__input"
                  id="radio-r1t"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.mastergrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1t"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.mastergrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r1u"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.ingen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1u"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.ingen
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r1v"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.annen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1v"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.annen
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-r1o"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <fieldset
        class="sc-beqWaB kWPIyU"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long navds-body-long--medium"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
      </fieldset>
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.kravOmAnnenStonad.svar"
        >
          <div
            class="sc-gueYoa qDReO"
          >
            <fieldset
              class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-r22"
                    name="andreYtelser.kravOmAnnenStonad.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r22"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-r23"
                    name="andreYtelser.kravOmAnnenStonad.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r23"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-r21"
              />
            </fieldset>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.annenPensjon.svar"
        >
          <div
            class="sc-gueYoa qDReO"
          >
            <fieldset
              class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.andreYtelser.annenPensjon.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-r26"
                    name="andreYtelser.annenPensjon.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r26"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-r27"
                    name="andreYtelser.annenPensjon.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r27"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-r25"
              />
            </fieldset>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <fieldset
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.andreYtelser.mottarPensjonUtland.svar
            </legend>
            <div
              class="navds-fieldset__description navds-body-short navds-body-short--medium"
              id="fieldset-description-r29"
            >
              <div>
                <button
                  aria-expanded="false"
                  class="sc-irTswW fZoIZZ"
                  data-testid="hvorforPanel_toggle"
                  type="button"
                >
                  <span>
                    hvorforSpoerVi
                  </span>
                  <span>
                    <svg
                      fill="none"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r2b"
                  name="andreYtelser.mottarPensjonUtland.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r2b"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r2c"
                  name="andreYtelser.mottarPensjonUtland.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r2c"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-r29"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-dmqHEX gdTKSL undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-dmqHEX sc-hLseeU gdTKSL gvDeXI"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-r2f"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r2f"
              >
                Lukk modalvindu
              </title>
              <path
                clip-rule="evenodd"
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-kFuwaP hXyNBk"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-kFuwaP hXyNBk"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;

exports[`Om den avdøde Snapshot 1`] = `
<div>
  <form>
    <div
      class="sc-gueYoa qDReO"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long navds-body-long--medium"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <div
      class="sc-brKeYL khYCDn"
      id="jobbStatus"
    >
      <fieldset
        class="navds-checkbox-group navds-checkbox-group--medium navds-fieldset navds-fieldset--medium"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          dinSituasjon.jobbStatus
        </legend>
        <div
          class="navds-checkboxes"
        >
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              checked=""
              class="navds-checkbox__input"
              id="checkbox-r1"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidstaker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.arbeidstaker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r2"
              required=""
              type="checkbox"
              value="jobbStatus.selvstendig"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r2"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.selvstendig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r3"
              required=""
              type="checkbox"
              value="jobbStatus.underUtdanning"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r3"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.underUtdanning
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r4"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidssoker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r4"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.arbeidssoker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              class="navds-checkbox__input"
              id="checkbox-r5"
              required=""
              type="checkbox"
              value="jobbStatus.ingen"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r5"
            >
              <span
                class="navds-checkbox__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="10"
                  role="img"
                  viewBox="0 0 13 10"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-checkbox__label-text navds-body-short navds-body-short--medium"
                >
                  jobbStatus.ingen
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r0"
        />
      </fieldset>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="kol-75"
          >
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].arbeidsgiver"
              >
                dinSituasjon.arbeidsforhold.arbeidsgiver
              </label>
              <input
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].arbeidsgiver"
                required=""
                type="text"
                value="Potetskreller AS"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r6"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="sc-fsQiph fPJEiB"
          >
            <div
              id="arbeidsforhold[0].ansettelsesforhold"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="select-r7"
                >
                  dinSituasjon.arbeidsforhold.ansettelsesforhold
                </label>
                <div
                  class="navds-select__container"
                >
                  <select
                    class="navds-select__input navds-body-short navds-body--medium"
                    id="select-r7"
                  >
                    <option
                      value=""
                    >
                      felles.velg
                    </option>
                    <option
                      value="stillingType.fast"
                    >
                      stillingType.fast
                    </option>
                    <option
                      value="stillingType.midlertidig"
                    >
                      stillingType.midlertidig
                    </option>
                    <option
                      value="stillingType.sesongarbeid"
                    >
                      stillingType.sesongarbeid
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="navds-select__chevron"
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="select-error-r7"
                />
              </div>
            </div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].stillingsprosent"
              >
                dinSituasjon.arbeidsforhold.stillingsprosent
              </label>
              <input
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].stillingsprosent"
                placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
                required=""
                type="text"
                value="100%"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r9"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            id="arbeidsforhold[0].forventerEndretInntekt.svar"
          >
            <div
              class="sc-gueYoa qDReO"
            >
              <fieldset
                class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
              >
                <legend
                  class="navds-fieldset__legend navds-label"
                >
                  dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
                </legend>
                <div
                  class="navds-radio-buttons"
                >
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-rc"
                      name="arbeidsforhold[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.ja"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-rc"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.ja
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-rd"
                      name="arbeidsforhold[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.nei"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-rd"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.nei
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="radioBorder navds-radio navds-radio--medium"
                  >
                    <input
                      class="navds-radio__input"
                      id="radio-re"
                      name="arbeidsforhold[0].forventerEndretInntekt.svar"
                      type="radio"
                      value="radiobuttons.vetIkke"
                    />
                    <label
                      class="navds-radio__label"
                      for="radio-re"
                    >
                      <span
                        class="navds-radio__content"
                      >
                        <span
                          class="navds-body-short navds-body-short--medium"
                        >
                          radiobuttons.vetIkke
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-fieldset__error"
                  id="fieldset-error-rb"
                />
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
      </div>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <fieldset
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rh"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.grunnskole"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rh"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.grunnskole
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-ri"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.videregående"
                />
                <label
                  class="navds-radio__label"
                  for="radio-ri"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.videregående
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rj"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.fagbrev"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rj"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.fagbrev
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rk"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.bachelorgrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rk"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.bachelorgrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  checked=""
                  class="navds-radio__input"
                  id="radio-rl"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.mastergrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rl"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.mastergrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rm"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.ingen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rm"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.ingen
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rn"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.annen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rn"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      utdanning.annen
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-rg"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <fieldset
        class="sc-beqWaB kWPIyU"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long navds-body-long--medium"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
      </fieldset>
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.kravOmAnnenStonad.svar"
        >
          <div
            class="sc-gueYoa qDReO"
          >
            <fieldset
              class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-rq"
                    name="andreYtelser.kravOmAnnenStonad.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-rq"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-rr"
                    name="andreYtelser.kravOmAnnenStonad.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-rr"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-rp"
              />
            </fieldset>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.annenPensjon.svar"
        >
          <div
            class="sc-gueYoa qDReO"
          >
            <fieldset
              class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.andreYtelser.annenPensjon.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-ru"
                    name="andreYtelser.annenPensjon.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-ru"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    class="navds-radio__input"
                    id="radio-rv"
                    name="andreYtelser.annenPensjon.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-rv"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short navds-body-short--medium"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-rt"
              />
            </fieldset>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <fieldset
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.andreYtelser.mottarPensjonUtland.svar
            </legend>
            <div
              class="navds-fieldset__description navds-body-short navds-body-short--medium"
              id="fieldset-description-r11"
            >
              <div>
                <button
                  aria-expanded="false"
                  class="sc-irTswW fZoIZZ"
                  data-testid="hvorforPanel_toggle"
                  type="button"
                >
                  <span>
                    hvorforSpoerVi
                  </span>
                  <span>
                    <svg
                      fill="none"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r13"
                  name="andreYtelser.mottarPensjonUtland.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r13"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-r14"
                  name="andreYtelser.mottarPensjonUtland.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r14"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-r11"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-dmqHEX gdTKSL undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-dmqHEX sc-hLseeU gdTKSL gvDeXI"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-r17"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r17"
              >
                Lukk modalvindu
              </title>
              <path
                clip-rule="evenodd"
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-kFuwaP hXyNBk"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-kFuwaP hXyNBk"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;
